# PokerInsight

./: .agent_prompt.md  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  commitlint.config.cjs  exportedCodex.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202605260001_initial_empty.py  202605260100_auth_tables.py  202605260200_poker_storage_tables.py  202605260300_billing_stats_flags.py
apps/api/app/: main.py
apps/api/app/api/: auth.py  deps.py  hands.py  imports.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: schema.py  session.py
apps/api/app/db/repositories/: __init__.py  hands.py  (+3 more)
apps/api/app/observability/: logging.py
apps/api/app/parser/: __init__.py  assembler.py  errors.py  models.py  normalizer.py  splitter.py  tokenizer.py  validator.py
apps/api/app/services/: auth.py  imports.py  storage.py
apps/api/app/worker/: celery_app.py  tasks.py
apps/api/tests/: conftest.py  factories.py
apps/api/tests/benchmarks/: baseline.json  test_parser_benchmark.py
apps/api/tests/golden/: test_golden_parser.py
apps/api/tests/integration/: test_auth_migration.py  test_db.py  test_import_flow.py
apps/api/tests/property/: test_parser_properties.py
apps/api/tests/unit/: test_auth_service.py  test_db_base.py  test_health.py  test_logging.py  test_security.py  test_storage.py
(+43 files in other folders)
