[project]
name = "pokerinsight-api"
version = "0.0.0"
description = "PokerInsight FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "fastapi==0.135.4",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.34",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.1",
  "ruff>=0.6.9"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: tests that require Postgres or Redis",
  "golden: parser golden fixtures",
  "property: lightweight property-style parser tests"
]

[tool.coverage.run]
source = ["app"]
branch = true
